bk_ida/gccida/g0/set_init_label
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/set_init_label/src/c-typeck.c:6267:6: error: use of undeclared identifier 'constructor_range_stack_0'; did you mean 'constructor_range_stack'?
if ( constructor_range_stack_0 ) 
     ^~~~~~~~~~~~~~~~~~~~~~~~~
     constructor_range_stack
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/set_init_label/src/c-typeck.c:5036:33: note: 'constructor_range_stack' declared here
struct constructor_range_stack *constructor_range_stack;
                                ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/set_init_label/src/obj/c-typeck.o] Error 1
